# ml-scout

./: README.md  pyproject.toml
gpu_optimus/: analyzer.py  cli.py  profiler.py
ml_scout.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
